--- a/first-react-project/src/styles/App.css
+++ b/first-react-project/src/styles/App.css
@@ -1,16 +1,16 @@
 .App {
+  
   text-align: center;
+  
+  width: 500px;
+  height: 500px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.buttonGitHub{
+color: white;
+background-color: black;
+border: 2px solid black;
+border-radius: 5%;
 }
 
 .App-header {
@@ -32,6 +32,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
